server/src/analysis/modules/snapshots/janet_zed_server__analysis__modules__tests__resolve_from_the_project_root.snap
---
source: server/src/analysis/modules/tests.rs
expression: /lib/b
---
----- IMPORT
/lib/b from /ws/src/main.janet

----- LOADS
/ws/lib/b.janet
