server/src/analysis/modules/snapshots/janet_zed_server__analysis__modules__tests__resolve_from_the_syspath.snap
---
source: server/src/analysis/modules/tests.rs
expression: spork/http
---
----- IMPORT
spork/http from /ws/src/main.janet

----- LOADS
/sys/spork/http.janet
