server/src/analysis/modules/snapshots/janet_zed_server__analysis__modules__tests__resolve_into_a_declared_directory.snap
---
source: server/src/analysis/modules/tests.rs
expression: fixture/lib/deep/c
---
----- IMPORT
fixture/lib/deep/c from /ws/src/main.janet

----- LOADS
/ws/lib/deep/c.janet
